--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,16 @@ services:
     build:
       context: .
       dockerfile: dashboard/Dockerfile
+    image: ki-trading-dashboard:latest
     container_name: ki-trading-dashboard
     ports:
-      - "3000:80"
+      - "3001:80"
     extra_hosts:
       - "host.docker.internal:host-gateway"
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:80/"]
+      interval: 30s
+      timeout: 3s
+      retries: 3
+      start_period: 5s
