Add comprehensive user manuals for Backend and Frontend of KI Trading Model
- Created BACKEND_ANLEITUNG.md detailing installation, configuration, and usage of the backend service.
- Created FRONTEND_ANLEITUNG.md outlining access, interface overview, trading analysis, and Docker deployment for the dashboard.

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ pydantic-settings>=2.1.0
 # LLM Integration (Ollama for Llama 3.1 70B)
 ollama>=0.1.6
 
-# RAG System - using FAISS instead of ChromaDB
+# RAG System (FAISS)
 faiss-cpu>=1.7.4
 sentence-transformers>=2.2.2
 
