Add NHITS forecasting models and service implementation
- Introduced Pydantic models for forecast data including ForecastResult, ForecastConfig, ForecastTrainingResult, and ForecastModelInfo.
- Implemented the NHITS forecasting service using PyTorch, including model training, forecasting, and metadata management.
- Added methods for data preparation, normalization, sequence creation, and model persistence.
- Integrated quantile loss for probabilistic forecasting and early stopping in the training loop.
- Enhanced logging for better traceability of model training and forecasting processes.

--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -6,7 +6,7 @@ LABEL description="Web Dashboard for KI Trading Model"
 # Remove default nginx config
 RUN rm -rf /usr/share/nginx/html/*
 
-# Copy dashboard files
+# Copy dashboard files (build from project root with -f dashboard/Dockerfile)
 COPY static/index.html /usr/share/nginx/html/index.html
 
 # Copy nginx configuration
