Update API documentation links in the dashboard header for clarity and consistency

--- a/dashboard/nginx.conf
+++ b/dashboard/nginx.conf
@@ -26,9 +26,16 @@ server {
         proxy_send_timeout 600s;
     }
 
-    # Proxy docs endpoint
+    # Proxy docs endpoint (Swagger UI)
     location /docs {
         proxy_pass http://host.docker.internal:8000/docs;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+    }
+
+    # Proxy redoc endpoint (ReDoc)
+    location /redoc {
+        proxy_pass http://host.docker.internal:8000/redoc;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
     }
