--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
 pydantic>=2.5.0
 pydantic-settings>=2.1.0
+python-multipart>=0.0.6
 
 # LLM Integration (Ollama for Llama 3.1 70B)
 ollama>=0.1.6
@@ -16,6 +17,7 @@ torch>=2.0.0
 # For CPU fallback: pip install faiss-cpu
 faiss-cpu>=1.7.4
 sentence-transformers>=2.2.2
+transformers>=4.30.0,<4.46.0
 
 # Database & API Client
 httpx>=0.25.0
