docs: Add comprehensive documentation for Microservices Data Flow & Architecture v2.0.0

--- a/.env.microservices
+++ b/.env.microservices
@@ -8,7 +8,7 @@ TIMESCALEDB_USER=postgres
 TIMESCALEDB_PASSWORD=postgres
 
 # EasyInsight API Configuration
-EASYINSIGHT_API_URL=http://10.1.19.102:3000
+EASYINSIGHT_API_URL=http://10.1.19.102:3000/api
 
 # Ollama/LLM Configuration
 OLLAMA_MODEL=llama3.1:70b
