Refactor: Remove TimescaleDB direct connection and sync services
- Removed TimescaleDB connection settings from settings.py.
- Eliminated TimescaleDBSyncService and related logic from main.py.
- Updated AnalysisService to fetch market data exclusively from EasyInsight API, removing all TimescaleDB queries and connection pooling.
- Adjusted NHITSTrainingService to rely solely on EasyInsight API for training data, removing fallback to TimescaleDB.
- Updated logging and error handling to reflect the new API-only architecture.

--- a/.env.example
+++ b/.env.example
@@ -1,57 +1,39 @@
 # Example environment variables for KI Trading Model
 # Copy this file to .env and adjust values for your environment
 
-# Service
+# Service Configuration
 SERVICE_HOST=0.0.0.0
 SERVICE_PORT=3011
 LOG_LEVEL=INFO
 
-# Ollama (use remote Ollama server if local not available)
-OLLAMA_HOST=http://localhost:11434
-OLLAMA_MODEL=llama3.1:8b
-
-# TimescaleDB
-TIMESCALEDB_HOST=localhost
-TIMESCALEDB_PORT=5432
-TIMESCALEDB_DATABASE=easyinsight
-TIMESCALEDB_USER=postgres
-TIMESCALEDB_PASSWORD=
-
-# FAISS / Embedding / NHITS
-FAISS_USE_GPU=1
-EMBEDDING_DEVICE=cuda   # 'cuda' or 'cpu' or 'auto'
-EMBEDDING_BATCH_SIZE=64
-USE_HALF_PRECISION=1
-NHITS_USE_GPU=1
-
-# FAISS persistence
-FAISS_PERSIST_DIRECTORY=data/faiss
-# TimescaleDB Configuration
-TIMESCALEDB_HOST=localhost
-TIMESCALEDB_PORT=5432
-TIMESCALEDB_DATABASE=easyinsight
-TIMESCALEDB_USER=postgres
-TIMESCALEDB_PASSWORD=your_password_here
-
-# RAG Sync Configuration
-RAG_SYNC_ENABLED=true
-RAG_SYNC_INTERVAL_SECONDS=300
-RAG_SYNC_BATCH_SIZE=100
-
-# Ollama Configuration (Llama 3.1 70B)
+# Ollama Configuration (local or remote LLM)
 OLLAMA_HOST=http://localhost:11434
 OLLAMA_MODEL=llama3.1:70b
+OLLAMA_NUM_CTX=8192
+OLLAMA_NUM_GPU=-1
+OLLAMA_NUM_THREAD=14
+
+# TimescaleDB Configuration REMOVED - Using EasyInsight API only
+# Direct database access has been disabled in favor of API-based data retrieval
+
+# EasyInsight API Configuration (primary data source)
+EASYINSIGHT_API_URL=http://10.1.19.102:3000/api
+
+# RAG Sync Configuration REMOVED - TimescaleDB sync disabled
 
 # FAISS RAG Configuration
 FAISS_PERSIST_DIRECTORY=./data/faiss
+RAG_COLLECTION_NAME=trading_history
+
+# GPU/Device Settings
+FAISS_USE_GPU=0
+EMBEDDING_DEVICE=cpu
+EMBEDDING_BATCH_SIZE=64
+USE_HALF_PRECISION=1
+NHITS_USE_GPU=0
 
 # Embedding Model
 EMBEDDING_MODEL=sentence-transformers/all-MiniLM-L6-v2
-
-# Service Configuration
-SERVICE_HOST=0.0.0.0
-SERVICE_PORT=8000
-LOG_LEVEL=INFO
 
 # Trading Analysis Configuration
 DEFAULT_LOOKBACK_DAYS=30
