Refactor NGINX configuration for direct service access and API gateway routes; remove unused scripts and main entry point; update EasyInsight API URL; adjust service health checks and logging.

--- a/docker/services/frontend/nginx.conf
+++ b/docker/services/frontend/nginx.conf
@@ -58,7 +58,58 @@ http {
             try_files $uri $uri/ /index.html;
         }
 
-        # API Gateway - NHITS Service (Port 3001)
+        # =====================================================
+        # Direct Service Access (for Dashboard)
+        # =====================================================
+
+        # NHITS Service - Direct Access
+        location /nhits/ {
+            proxy_pass http://nhits-backend/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 75s;
+        }
+
+        # LLM Service - Direct Access
+        location /llm/ {
+            proxy_pass http://llm-backend/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+            proxy_read_timeout 300s;
+        }
+
+        # Data Service - Direct Access
+        location /data/ {
+            proxy_pass http://data-backend/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+            proxy_read_timeout 300s;
+        }
+
+        # =====================================================
+        # API Gateway Routes
+        # =====================================================
+
+        # NHITS Service (Port 3001)
         location /api/v1/forecast/ {
             proxy_pass http://nhits-backend/api/v1/forecast/;
             proxy_http_version 1.1;
@@ -73,7 +124,7 @@ http {
             proxy_connect_timeout 75s;
         }
 
-        # API Gateway - LLM Service (Port 3002)
+        # LLM Service (Port 3002)
         location /api/v1/analyze {
             proxy_pass http://llm-backend/api/v1/analyze;
             proxy_http_version 1.1;
@@ -106,7 +157,17 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # API Gateway - Data Service (Port 3003)
+        location /api/v1/recommendation/ {
+            proxy_pass http://llm-backend/api/v1/recommendation/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 300s;
+        }
+
+        # Data Service (Port 3003)
         location /api/v1/symbols {
             proxy_pass http://data-backend/api/v1/symbols;
             proxy_http_version 1.1;
@@ -165,14 +226,12 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
         }
 
-        # Swagger/OpenAPI endpoints
+        # Swagger Documentation
         location /docs {
-            # Redirect to NHITS service docs by default
-            return 301 /api/v1/forecast/docs;
+            return 301 /nhits/docs;
         }
 
         location /openapi.json {
-            # Aggregate OpenAPI specs (would need custom implementation)
             proxy_pass http://nhits-backend/openapi.json;
         }
 
