--- a/docker-compose.microservices.yml
+++ b/docker-compose.microservices.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # Frontend - API Gateway & Dashboard (Port 3000)
   frontend:
@@ -15,6 +13,8 @@ services:
       - data-service
     networks:
       - trading-net
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/health"]
@@ -39,15 +39,13 @@ services:
       - SERVICE_NAME=nhits
       - PORT=3001
       - NHITS_USE_GPU=1
-      - TIMESCALE_HOST=${TIMESCALE_HOST:-10.1.19.104}
-      - TIMESCALE_PORT=${TIMESCALE_PORT:-5432}
-      - TIMESCALE_DB=${TIMESCALE_DB:-trading}
-      - TIMESCALE_USER=${TIMESCALE_USER:-postgres}
-      - TIMESCALE_PASSWORD=${TIMESCALE_PASSWORD}
-      - EASYINSIGHT_API_URL=${EASYINSIGHT_API_URL:-http://10.1.19.102:3000}
+      - EASYINSIGHT_API_URL=${EASYINSIGHT_API_URL:-http://10.1.19.102:3000/api}
       - NHITS_AUTO_RETRAIN_DAYS=${NHITS_AUTO_RETRAIN_DAYS:-7}
+      - OLLAMA_HOST=http://host.docker.internal:11434
     networks:
       - trading-net
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     restart: unless-stopped
     deploy:
       resources:
@@ -76,20 +74,20 @@ services:
       - "3002:3002"
     volumes:
       - rag-data:/app/data/rag
-      - ollama-models:/root/.ollama
       - ./src:/app/src:ro
       - ./logs:/app/logs
     environment:
       - SERVICE_NAME=llm
       - PORT=3002
       - OLLAMA_MODEL=${OLLAMA_MODEL:-llama3.1:70b}
-      - OLLAMA_BASE_URL=${OLLAMA_BASE_URL:-http://ollama:11434}
+      - OLLAMA_HOST=http://host.docker.internal:11434
       - FAISS_USE_GPU=1
       - EMBEDDING_DEVICE=cuda
+      - EASYINSIGHT_API_URL=${EASYINSIGHT_API_URL:-http://10.1.19.102:3000/api}
     networks:
       - trading-net
-    depends_on:
-      - ollama
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     restart: unless-stopped
     deploy:
       resources:
@@ -122,16 +120,12 @@ services:
     environment:
       - SERVICE_NAME=data
       - PORT=3003
-      - TIMESCALE_HOST=${TIMESCALE_HOST:-10.1.19.104}
-      - TIMESCALE_PORT=${TIMESCALE_PORT:-5432}
-      - TIMESCALE_DB=${TIMESCALE_DB:-trading}
-      - TIMESCALE_USER=${TIMESCALE_USER:-postgres}
-      - TIMESCALE_PASSWORD=${TIMESCALE_PASSWORD}
-      - EASYINSIGHT_API_URL=${EASYINSIGHT_API_URL:-http://10.1.19.102:3000}
-      - TIMESCALE_SYNC_ENABLED=${TIMESCALE_SYNC_ENABLED:-true}
-      - TIMESCALE_SYNC_INTERVAL_MINUTES=${TIMESCALE_SYNC_INTERVAL_MINUTES:-60}
+      - EASYINSIGHT_API_URL=${EASYINSIGHT_API_URL:-http://10.1.19.102:3000/api}
+      - OLLAMA_HOST=http://host.docker.internal:11434
     networks:
       - trading-net
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     restart: unless-stopped
     deploy:
       resources:
@@ -144,37 +138,10 @@ services:
       retries: 3
       start_period: 20s
 
-  # Ollama Service - LLM Backend
-  ollama:
-    image: ollama/ollama:latest
-    container_name: trading-ollama
-    runtime: nvidia
-    ports:
-      - "11434:11434"
-    volumes:
-      - ollama-models:/root/.ollama
-    networks:
-      - trading-net
-    restart: unless-stopped
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: 1
-              capabilities: [gpu]
-    healthcheck:
-      test: ["CMD", "ollama", "list"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-
 volumes:
   models-data:
     driver: local
   rag-data:
-    driver: local
-  ollama-models:
     driver: local
 
 networks:
