--- a/docker/services/frontend/nginx.conf
+++ b/docker/services/frontend/nginx.conf
@@ -42,6 +42,10 @@ http {
         server trading-data:3003;
     }
 
+    upstream easyinsight-backend {
+        server 10.1.19.102:3000;
+    }
+
     server {
         listen 80;
         server_name localhost;
@@ -240,6 +244,20 @@ http {
             access_log off;
             return 200 "healthy\n";
             add_header Content-Type text/plain;
+        }
+
+        # =====================================================
+        # EasyInsight API Proxy (External Data Source)
+        # =====================================================
+        location /easyinsight/ {
+            proxy_pass http://easyinsight-backend/;
+            proxy_http_version 1.1;
+            proxy_set_header Host 10.1.19.102:3000;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_connect_timeout 10s;
+            proxy_read_timeout 30s;
         }
     }
 }
