--- a/docker/services/frontend/nginx.conf
+++ b/docker/services/frontend/nginx.conf
@@ -42,6 +42,10 @@ http {
         server trading-data:3003;
     }
 
+    upstream rag-backend {
+        server trading-rag:3004;
+    }
+
     upstream easyinsight-backend {
         server 10.1.19.102:3000;
     }
@@ -109,6 +113,20 @@ http {
             proxy_read_timeout 300s;
         }
 
+        # RAG Service - Direct Access
+        location /rag/ {
+            proxy_pass http://rag-backend/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+            proxy_read_timeout 300s;
+        }
+
         # =====================================================
         # API Gateway Routes
         # =====================================================
@@ -152,13 +170,15 @@ http {
             proxy_read_timeout 300s;
         }
 
+        # RAG Service (Port 3004)
         location /api/v1/rag/ {
-            proxy_pass http://llm-backend/api/v1/rag/;
+            proxy_pass http://rag-backend/api/v1/rag/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 300s;
         }
 
         location /api/v1/recommendation/ {
@@ -230,13 +250,9 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
         }
 
-        # Swagger Documentation
-        location /docs {
+        # Swagger Documentation - Default redirect
+        location = /docs {
             return 301 /nhits/docs;
-        }
-
-        location /openapi.json {
-            proxy_pass http://nhits-backend/openapi.json;
         }
 
         # Health check endpoint
