feat: Update microservices configuration and documentation for port assignments

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,12 @@ SERVICE_HOST=0.0.0.0
 SERVICE_PORT=3011
 LOG_LEVEL=INFO
 
+# Microservices Ports
+DATA_SERVICE_PORT=3001
+NHITS_SERVICE_PORT=3002
+RAG_SERVICE_PORT=3003
+LLM_SERVICE_PORT=3004
+
 # Ollama Configuration (local or remote LLM)
 OLLAMA_HOST=http://localhost:11434
 OLLAMA_MODEL=llama3.1:70b
