--- a/.env.microservices
+++ b/.env.microservices
@@ -1,5 +1,11 @@
 # KI Trading Model - Microservices Configuration
 
+# Microservices Ports
+DATA_SERVICE_PORT=3001
+NHITS_SERVICE_PORT=3002
+RAG_SERVICE_PORT=3003
+LLM_SERVICE_PORT=3004
+
 # TimescaleDB Configuration
 TIMESCALEDB_HOST=10.1.19.102
 TIMESCALEDB_PORT=5432
