--- a/docker/services/rag/Dockerfile
+++ b/docker/services/rag/Dockerfile
@@ -4,6 +4,9 @@ FROM nvcr.io/nvidia/pytorch:23.08-py3
 LABEL maintainer="KI Trading Model"
 LABEL service="rag"
 
+# Build argument for port
+ARG SERVICE_PORT=3003
+
 WORKDIR /app
 
 # Install system dependencies
@@ -29,14 +32,14 @@ RUN mkdir -p /app/data/faiss /app/logs
 # Set environment variables
 ENV PYTHONPATH=/app
 ENV SERVICE_NAME=rag
-ENV PORT=3004
+ENV PORT=${SERVICE_PORT}
 
 # Expose port
-EXPOSE 3004
+EXPOSE ${SERVICE_PORT}
 
-# Health check
+# Health check - uses shell form to expand variable
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
-    CMD curl -f http://localhost:3004/health || exit 1
+    CMD curl -f http://localhost:${PORT}/health || exit 1
 
-# Run service
-CMD ["python", "-m", "uvicorn", "src.services.rag_app.main:app", "--host", "0.0.0.0", "--port", "3004"]
+# Run service - uses shell form to expand variable
+CMD python -m uvicorn src.services.rag_app.main:app --host 0.0.0.0 --port ${PORT}
