Enhance NHITS Forecasting Service with Multi-Timeframe Support
- Introduced TIMEFRAME_CONFIG for M15, H1, and D1 configurations.
- Updated model training and forecasting methods to accommodate multiple timeframes.
- Enhanced metadata handling to include timeframe-specific details.
- Improved logging to reflect timeframe in training and forecasting processes.
- Refactored data preparation and model loading to support multi-variate forecasting with additional indicators.
- Updated NHITSTrainingService to utilize hourly data for training with all available indicators.

--- a/docker-compose.microservices.yml
+++ b/docker-compose.microservices.yml
@@ -12,6 +12,8 @@ services:
     container_name: trading-frontend
     ports:
       - "3000:80"
+    volumes:
+      - ./docker/services/frontend/html:/usr/share/nginx/html:ro
     environment:
       - DATA_SERVICE_PORT=${DATA_SERVICE_PORT:-3001}
       - NHITS_SERVICE_PORT=${NHITS_SERVICE_PORT:-3002}
