feat: Update Dockerfile for NHITS service to use Python base image and install necessary dependencies

--- a/docker/services/nhits/Dockerfile
+++ b/docker/services/nhits/Dockerfile
@@ -1,5 +1,6 @@
 # NHITS Service Dockerfile
-FROM nvcr.io/nvidia/pytorch:23.08-py3
+# Use Python base image - CUDA libraries are mounted from host via nvidia runtime
+FROM python:3.11-slim
 
 LABEL maintainer="KI Trading Model"
 LABEL service="nhits"
@@ -12,10 +13,17 @@ WORKDIR /app
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
     curl \
+    build-essential \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements
+# Copy requirements first for better caching
 COPY requirements.txt .
+
+# Install PyTorch with CUDA support (uses host CUDA via nvidia runtime)
+# PyTorch 2.5+ supports sm_110 (Thor) when using CUDA 13.x from host
+RUN pip install --no-cache-dir torch torchvision --index-url https://download.pytorch.org/whl/cu124
+
+# Install remaining requirements
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy source code
@@ -29,6 +37,9 @@ RUN mkdir -p /app/data/models /app/logs
 ENV PYTHONPATH=/app
 ENV SERVICE_NAME=nhits
 ENV PORT=${SERVICE_PORT}
+# Enable CUDA to use host libraries
+ENV NVIDIA_VISIBLE_DEVICES=all
+ENV NVIDIA_DRIVER_CAPABILITIES=compute,utility
 
 # Expose port
 EXPOSE ${SERVICE_PORT}
