--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,9 @@ httpx>=0.25.0
 sqlalchemy[asyncio]>=2.0.23
 asyncpg>=0.29.0
 
+# Market Data APIs
+twelvedata>=1.2.0
+
 # Data Processing
 pandas>=2.0.0
 numpy>=1.24.0
