--- a/dashboard/nginx.conf
+++ b/dashboard/nginx.conf
@@ -26,6 +26,22 @@ server {
         proxy_send_timeout 600s;
     }
 
+    # Proxy /data/api requests (for config-data.html)
+    location /data/api/ {
+        proxy_pass http://host.docker.internal:3011/api/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+        proxy_read_timeout 600s;
+        proxy_connect_timeout 120s;
+        proxy_send_timeout 600s;
+    }
+
     # Proxy docs endpoint (Swagger UI)
     location /docs {
         proxy_pass http://host.docker.internal:3011/docs;
