--- a/docker/services/frontend/nginx.conf
+++ b/docker/services/frontend/nginx.conf
@@ -201,11 +201,14 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /api/v1/managed-symbols {
-            proxy_pass http://data-backend/api/v1/managed-symbols;
+        # Managed Symbols - use regex to preserve encoded slashes in symbol IDs
+        location ~ ^/api/v1/managed-symbols(/.*)?$ {
+            proxy_pass http://data-backend$request_uri;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         location /api/v1/strategies {
