feat: Implement Data Fetcher Proxy and Data Service Client for external data access
- Added DataFetcherProxy class to handle data requests through the Data Service.
- Implemented methods for fetching various data types including economic calendar, sentiment, on-chain data, orderbook, macro data, historical patterns, technical levels, regulatory updates, and EasyInsight data.
- Introduced ProxyResult class to wrap Data Service responses for compatibility.
- Created singleton pattern for DataFetcherProxy instance retrieval.
- Developed DataServiceClient class for HTTP communication with the Data Service.
- Included methods for GET and POST requests to interact with external data sources.
- Added error handling and logging for service requests.

--- a/docker-compose.microservices.yml
+++ b/docker-compose.microservices.yml
@@ -146,6 +146,7 @@ services:
       - FAISS_USE_GPU=1
       - EMBEDDING_DEVICE=cuda
       - FAISS_PERSIST_DIRECTORY=/app/data/faiss
+      - DATA_SERVICE_URL=http://trading-data:${DATA_SERVICE_PORT:-3001}
     networks:
       - trading-net
     extra_hosts:
