--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ transformers>=4.30.0,<4.46.0
 
 # Database & API Client
 httpx>=0.25.0
+aiohttp>=3.9.0
 sqlalchemy[asyncio]>=2.0.23
 asyncpg>=0.29.0
 
