--- a/docker-compose.microservices.yml
+++ b/docker-compose.microservices.yml
@@ -30,7 +30,7 @@ services:
       - "host.docker.internal:host-gateway"
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/health"]
+      test: ["CMD", "curl", "-f", "-s", "http://localhost/health"]
       interval: 30s
       timeout: 3s
       retries: 3
