--- a/docker/services/frontend/nginx.conf
+++ b/docker/services/frontend/nginx.conf
@@ -261,8 +261,8 @@ http {
         # Health check endpoint
         location /health {
             access_log off;
+            default_type text/plain;
             return 200 "healthy\n";
-            add_header Content-Type text/plain;
         }
 
         # =====================================================
